<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    <ImageView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:src="@drawable/banner_login"
        />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

	    <EditText
	        android:id="@+id/login_username"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/btn_border"
		      android:hint="@string/input_mobile"
		      android:inputType="phone"
			  android:singleLine="true"	        
	         />

	    <EditText
	        android:id="@+id/login_password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/btn_border"
		    android:password="true"
		    android:hint="@string/input_password"
		    android:singleLine="true"        
		  />
	    
		<Button
		    android:id="@+id/login_submit_btn"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginTop="15dp"
		    android:background="@drawable/shape"
		    android:text="@string/login_submit"
		    android:textColor="#ffffff" />	    
	 
		<RelativeLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:paddingTop="20dp"
		    android:orientation="horizontal" >

			<TextView
			    android:id="@+id/login_findpass_btn"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentLeft="true"
			    android:layout_alignParentTop="true"
			    android:gravity="left|center"
			    android:text="@string/login_findpass_txt" />

			<TextView
			    android:id="@+id/login_register_btn"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentRight="true"
			    android:layout_alignParentTop="true"
			    android:gravity="right|center"
			    android:text="@string/login_register_txt" />

		</RelativeLayout>		
	</LinearLayout>
</LinearLayout>